<resources>
    //Sign-up
    <string name="app_name">Drippy</string>
    <string name="txtUsername">Username</string>
    <string name="txtEmail">Email</string>
    <string name="txtPass">Password</string>
    <string name="txtCreate">Create Account</string>
    <string name="txtTerms">I agree to the <b><font color="#000000">Terms of Service</font></b> and <b><font color="#000000">Privacy Policy</font></b>.</string>
    <string name="txtSignIn">Already registered?<b> Sign In</b></string>

    // Login
    <string name="txtLogin">Login</string>
    <string name="txtRemember">Remember Me</string>

    //Wardrobe
    <string name="hello_miguel">Hello, Miguel</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="introduction">Here\'s your added outfit of the day!!</string>
    <string name="recently_added">Recently added</string>
    <string name="view_all">View All</string>

    //Homepage
    <string name="Find_your_style">Find Your Best Style</string>
    <string name="description">Discover your best style and find the perfect outfit in seconds with our outfit recommendation system!</string>
    <string name="started">Get Started</string>

    //Outfit Planning
    <string name="outfit">Outfit Planning</string>
    <string name="clothes">Clothes</string>
    <string name="outfits">Outfits</string>
    <string name="calendar">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passLength">Password must be at least 6 characters long</string>
    <string name="userEmpty">Enter Username</string>
    <string name="title_activity_order_status">OrderStatus</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_order_statuss">OrderStatuss</string>
    <string name="title_activity_order">Order</string>

    //Outfit Suggestions
    <string name="suggestion">Outfit Suggestions</string>
    <string name="DescriptionTitle">Description</string>
    <string name="Info">"Discover the perfect outfit for any occasion! Whether it's a casual day out, a party getup, a formal event, or outdoor activities, we've got you covered. Get personalized recommendations for men and women. Feel confident and stylish wherever you go with our curated outfit suggestions!"</string>

</resources>