<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:context=".Homepage">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:alpha="0.8"
        android:src="@drawable/bghomepage" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="290dp"
        android:layout_height="146dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="363dp"
        android:fontFamily="@font/garetbold"
        android:text="@string/Find_your_style"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="508dp"
        android:textColor="#D6D3D3"
        android:fontFamily="@font/garet"
        android:text="@string/description"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="251dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="615dp"
        android:background="@drawable/inputbg"
        android:text="@string/started"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="324dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/sellingicon" />


</RelativeLayout>